# ChangeLog for net-im/bitlbee
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.179 2015/04/19 07:01:59 pacho Exp $

  19 Apr 2015; Pacho Ramos <pacho@gentoo.org> bitlbee-3.2.2.ebuild:
  x86 stable wrt bug #529512

  14 Apr 2015; Manuel Rüger <mrueg@gentoo.org> -bitlbee-3.0.6.ebuild,
  -bitlbee-3.2.1-r2.ebuild, -bitlbee-3.2.1.ebuild, -bitlbee-3.2.ebuild:
  Remove old.

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> bitlbee-3.2.1-r2.ebuild,
  bitlbee-3.2.1.ebuild, bitlbee-3.2.2.ebuild, bitlbee-3.2.ebuild:
  Drop old Python implementations

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> bitlbee-3.2.2.ebuild:
  Stable for amd64, wrt bug #529512

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> bitlbee-3.2.2.ebuild:
  Stable for ppc, wrt bug #529512

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> bitlbee-3.0.5-r1.ebuild,
  bitlbee-3.0.6.ebuild, bitlbee-3.2.1-r2.ebuild, bitlbee-3.2.1.ebuild,
  bitlbee-3.2.2.ebuild, bitlbee-3.2.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

*bitlbee-3.2.2 (10 Oct 2014)

  10 Oct 2014; Alex Alexander <wired@gentoo.org> +bitlbee-3.2.2.ebuild:
  version bump. libotr-4 and systemd support. bug #516918

*bitlbee-3.2.1-r2 (09 Oct 2014)

  09 Oct 2014; Alex Alexander <wired@gentoo.org> -bitlbee-3.2.1-r1.ebuild,
  +bitlbee-3.2.1-r2.ebuild, +files/bitlbee.confd-r1, files/bitlbee.initd-r1:
  init: let users choose if they want forks stopped

*bitlbee-3.2.1-r1 (07 Oct 2014)

  07 Oct 2014; Alex Alexander <wired@gentoo.org> +bitlbee-3.2.1-r1.ebuild,
  +files/bitlbee.initd-r1:
  init script: stop and restart properly, bug #418461

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> bitlbee-3.0.5-r1.ebuild,
  bitlbee-3.0.6.ebuild, bitlbee-3.2.1.ebuild, bitlbee-3.2.ebuild:
  Remove trailing '.' from DESCRIPTION.

  05 Jun 2014; Manuel Rüger <mrueg@gentoo.org> bitlbee-3.0.5-r1.ebuild,