@@ -1,6 +1,9 @@
 # ChangeLog for net-im/bitlbee
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.179 2015/04/19 07:01:59 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.180 2015/05/16 11:06:33 pacho Exp $
+
+  16 May 2015; Pacho Ramos <pacho@gentoo.org> bitlbee-3.2.2.ebuild:
+  Rename jabber to xmpp USE (#216300)
 
   19 Apr 2015; Pacho Ramos <pacho@gentoo.org> bitlbee-3.2.2.ebuild:
   x86 stable wrt bug #529512
